# VelocityGPT2-pub

./: .gitignore  README.md  environment.yml  install_env.sh  main.py  pyproject.toml
notebooks/: VQVAE_training.ipynb  VelocityGPT_training.ipynb  Visualization.ipynb
results/comfy-butterfly-327/: 98784checkpoint.pt  config.pt  model.pt  time.npy  train_loss.npy  valid_loss.npy
results/comic-plasma-319/: 520checkpoint.pt  config.pt  model.pt  time.npy  train_loss.npy  valid_loss.npy
scripts/: run_fsq_refl_training.sh  run_fsq_vel_training.sh  run_gpt_training.sh  run_velgen.sh
velocitygpt/: NpyDataset.py  datasets.py  losses.py  models.py  modules.py  pipeline.py  pytorchtools.py  quantizer.py  train.py  upsampler.py  utils.py  vis.py
