[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "velocitygpt"
authors = [
    {name = "Randy Harsuko", email = "mochammad.randycaesario@kaust.edu.sa"},
]
description = "VelocityGPT: a multimodal shallow-to-deep seismic velocity model generator"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["velocity model building", "generative model", "autoregressive", "deep learning"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
    "numpy >= 1.24.3",
    "torch>=1.12.1"
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
